[project]
name = "transit"
version = "0.1.0"
description = "A MiWay monitoring app"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.128.6",
    "geoalchemy2>=0.17.1",
    "gtfs-realtime-bindings>=2.0.0",
    "prometheus-client>=0.24.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "sqlalchemy==1.4.49",
]
